--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-stripe-elements": "^6.0.4",
     "antd": "^4.10.2",
     "apollo-boost": "^0.4.9",
     "graphql": "^15.4.0",
@@ -22,6 +23,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-stripe-elements": "^6.1.2",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
