--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.7",
-    "@types/react-stripe-elements": "^6.0.4",
     "antd": "^4.10.2",
     "apollo-boost": "^0.4.9",
     "graphql": "^15.4.0",
@@ -53,5 +52,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:9000"
+  "proxy": "http://localhost:9000",
+  "devDependencies": {
+    "@types/react-stripe-elements": "^6.0.4"
+  }
 }
